fix: resolve cartlist overflow issue

--- a/src/components/CartList/CartList.module.css
+++ b/src/components/CartList/CartList.module.css
@@ -24,3 +24,9 @@
 .empty_section {
   text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+  .list {
+    width: 200px;
+  }
+}
